# r26-campus-autonomy-ws

./: direction_image_lidar.rviz  person_direction_test.rviz  start_bringup.sh  stop_bringup.sh
src/HesaiLidar_ROS_2.0/: CMakeLists.txt
src/fisheye_process/: CMakeLists.txt  package.xml
src/fisheye_process/fisheyeStitcher/app/: stitch.cpp
src/fisheye_process/include/: fisheye_stitcher.hpp
src/fisheye_process/src/: fisheye_stitcher.cpp  stitch.cpp
src/hunter_base/: CMakeLists.txt
src/hunter_base/include/hunter_base/: hunter_base_ros.hpp  hunter_messenger.hpp
src/hunter_base/launch/: hunter_base_no_odom.launch.py  hunter_base_pub_odom.launch.py
src/hunter_base/src/: hunter_base_ros.cpp
src/hunter_bringup/: CMakeLists.txt  package.xml
src/hunter_bringup/launch/: hunter_bringup_no_imu.launch.py
src/hunter_cartographer/: CMakeLists.txt  package.xml
src/hunter_cartographer/config/: cartographer.rviz  hunter_2d.lua
src/hunter_cartographer/launch/: cartographer.launch.py
src/hunter_cartographer/maps/: hall.pgm  hall.yaml
src/hunter_nav2/: CMakeLists.txt  package.xml
src/hunter_nav2/config/: nav2.rviz
src/hunter_nav2/launch/: navigation.launch.py
src/hunter_nav2/param/: nav2.yaml
src/hunter_se_description/: CMakeLists.txt  package.xml
src/hunter_se_description/launch/: display.launch.py  gazebo.launch.py
src/hunter_se_description/rviz/: model.rviz
src/hunter_se_description/urdf/: hunter_se_description.urdf  hunter_se_description.xacro
src/pointcloud_to_laserscan/launch/: pointcloud2laserscan.launch.py  pointcloud_to_laserscan_launch.py  soeren.launch.py
src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
src/ugv_sdk/include/ugv_sdk/details/: parser_base.hpp
src/usb_cam/: CMakeLists.txt
src/usb_cam/config/: camera_info.yaml  params_1.yaml
src/usb_cam/launch/: camera.launch.py  camera_config.py
src/yolo_person_detection/: package.xml  setup.cfg  setup.py
src/yolo_person_detection/launch/: yolo_person_detection.launch.py
src/yolo_person_detection/yolo_person_detection/: person_direction_node.py  yolo_node.py
yolo11n_openvino_model/: metadata.yaml
