<package format="3">
  <name>hunter_se_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for hunter_se_description</p>
    <p>This package contains configuration data, 3D models, and launch files for the hunter_se_description robot</p>
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>
